[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/Enemy/idle.png" type="Texture" id=1]
[ext_resource path="res://Enemy.gd" type="Script" id=2]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8 )

[node name="Enemy" type="Area2D"]
scale = Vector2( 2, 2 )
collision_layer = 3
collision_mask = 3
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="LeftDownRayCast2D" type="RayCast2D" parent="."]
position = Vector2( -8, 8 )
enabled = true
cast_to = Vector2( 0, 5 )
collide_with_areas = true

[node name="LeftRayCast2D" type="RayCast2D" parent="."]
position = Vector2( -8, 0 )
enabled = true
cast_to = Vector2( -5, 0 )
collide_with_areas = true

[node name="RightDownRayCast2D" type="RayCast2D" parent="."]
position = Vector2( 8, 8 )
enabled = true
cast_to = Vector2( 0, 5 )
collide_with_areas = true

[node name="RightRayCast2D" type="RayCast2D" parent="."]
position = Vector2( 8, 0 )
enabled = true
cast_to = Vector2( 5, 0 )
collide_with_areas = true
[connection signal="body_entered" from="." to="." method="_on_Enemy_body_entered"]
